--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -15,6 +15,9 @@
         android:theme="@style/Theme.ProyectoFormativoModulo"
         tools:targetApi="31">
         <activity
+            android:name=".item_card"
+            android:exported="false" />
+        <activity
             android:name=".Bienvenida"
             android:exported="false" />
         <activity
@@ -30,6 +33,10 @@
             android:name=".MainActivity"
             android:exported="false"
             android:label="@string/app_name" />
+
+        <meta-data
+            android:name="preloaded_fonts"
+            android:resource="@array/preloaded_fonts" />
     </application>
 
 </manifest>
